# yolov8_ros

./: requirements.txt
object_analytics_msgs/: CMakeLists.txt
object_msgs/: CMakeLists.txt  package.xml
object_msgs/msg/: Object.msg  ObjectInBox.msg  ObjectsInBoxes.msg
yolov8_bringup/launch/: yolov8_custom.launch.py  yolov8_cutsom.launch.py
yolov8_ros/: package.xml  setup.py
yolov8_ros/yolov8_ros/: bounding_box_3d_rviz_publisher.py  debug_node_object_msgs.py  yolov8_node.py  yolov8_node_object_msgs.py
